# Taiwan-Zhuyin-input-method-translator

./: .gitignore  README.md  README_zh-TW.md  main.py  pyproject.toml  requirements.txt
src/bopomofo_translator/: __init__.py  cli.py  config.py  core.py  monitor.py
tests/: test_core.py
